syntax = "proto3";

// 指定模板类的包路径
option java_package = "yxl.day5.dto";
// 指定模板类的名称，名称必须是有实际业务意义的
option java_outer_classname = "HeroProto";

message Hero{
  optional int64 attack = 1;//攻击
  optional int64 defense = 2;//防御
  optional int64 life = 3;//生命值
}

message Role{
  repeated int32 id = 1;
  repeated int32 uid = 2;
  repeated int32 serverId = 3;
  repeated int32 roleId = 4;
  repeated string roleName = 5;
  repeated string roleType = 6;
  repeated Hero hero = 7;
  repeated int32 heroLen = 8;
  optional string message = 9;
}
